src/components/text-editor/text-editor.scss
@use '../../style/internal/shared_input-select-picker';
@use '../../../src/style/mixins.scss';

@include shared_input-select-picker.lime-empty-value-for-readonly;
@include shared_input-select-picker.lime-looks-like-input-value;

* {
    box-sizing: border-box;
}

:host(limel-text-editor) {
    --limel-text-editor-padding: 0.75rem;
    position: relative;
    isolation: isolate;
    display: flex;
    flex-direction: column;

    width: 100%;
    min-width: 5rem;
    min-height: 4rem;
    height: 100%;
    max-height: 100%;
}

:host(limel-text-editor:not([readonly])) {
    --limel-text-editor-outline-color: #{shared_input-select-picker.$lime-text-field-outline-color};
    --limel-text-editor-background-color: #{shared_input-select-picker.$background-color-normal};
    --limel-text-editor-label-color: #{shared_input-select-picker.$label-color};
}

:host(limel-text-editor[readonly]) {
    --limel-text-editor-outline-color: transparent;
    min-height: shared_input-select-picker.$height-of-mdc-text-field;

    limel-markdown {
        display: block;
        padding: var(--limel-text-editor-padding);
    }
}

.notched-outline {
    position: absolute;
    inset: 0;

    display: flex;
    background-color: var(--limel-text-editor-background-color);
}

.leading-outline,
.notch,
.trailing-outline {
    border-width: 1px;
    border-style: solid;
    border-color: var(--limel-text-editor-outline-color);
}

.leading-outline {
    flex-shrink: 0;
    width: 0.75rem;
    border-right-width: 0;
    border-top-left-radius: 0.25rem;
    border-bottom-left-radius: 0.25rem;
}

.notch {
    flex-shrink: 0;

    position: relative;
    z-index: 2;

    border-top-width: 0;
    border-right-width: 0;
    border-left-width: 0;

    max-width: calc(100% - 1.5rem);
}

.trailing-outline {
    flex-grow: 1;
    border-left-width: 0;
    border-top-right-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
}

label {
    transform: translateY(-50%);

    @include mixins.truncate-text;
    display: block;
    padding: 0 0.25rem;

    color: var(--limel-text-editor-label-color);
    font-size: 0.65rem; // `10.4px` similar to MDC's floating label
    letter-spacing: var(--mdc-typography-subtitle1-letter-spacing, 0.009375em);
}

limel-prosemirror-adapter {
    flex-grow: 1;

    min-width: 0;
    min-height: 0;
    height: 100%;
    overflow: hidden auto;
}

